todoyu core changelog

core 2.2.0 - not released yet
	* Feature: Removing valueless foreign records does not require confirmation anymore
	* Feature: Better support for SQL statements to update fields. Comma is now allowed in type definition (ex: DECIMAL(5,2))
	* Added: new DB query building method: Todoyu::db()->buildInArrayQuery()
	* Added: General content item inline tabs management and rendering to core
	* Added: "greaterThan" form validator
	* Added: Methods for fetching right / section and resp. required right from extension rights matrix
	* Added: TodoyuArray::implodeAssoc()
	* Added: TodoyuDateRange: setMinLength(), isOverlapping(), isInOneDay(), getOverlappingRange(), getAmountOfDays()
	* Changed: Used faster (int) instead of intval() for integer typecasting
	* Changed: Moved getDayTimestamps(), getDayTimestampsMap() to TodoyuDayRange
	* Changed: Made TodoyuTime::getWeekStart and getWeekAnd relative to system config of 1st day of week being sunday or monday
	* Removed: scal calendar/date picker library
	* Removed: TodoyuString::replaceOnce()
	* Removed: TodoyuString::strictHtml2text() is now integrated in html2text() method

core 2.1.4 - 2011-12-13
	* Bugfix: Hovering multiple quick-info elements subsequently in direct sequence did only show the first info, no following ones
	* Bugfix: RTE auto focus failed. Added workaround to focus RTE if first field
	* Bugfix: Area was not set on popup AJAX requests
	* Changed: Only focus RTE when loaded over AJAX
	* Changed: TodoyuFormElement::getStorageData() is final now and checks always for noStorage and disabled
	* Changed: TodoyuString::html2text text handling improved
	* Changed: Popup calendar dotted border width is now 1px (was 2)
	* Changed: Labels core.date.title.date_create => core.date.date_create (same for date_update)
	* Added: Hide context menu on tab change
	* Added: TodoyuCountry::getIsoNumCurrency()
	* Added: TodoyuFormElement::getStorageDataInternal() to override storageData properly