@@ -14,6 +14,8 @@
 	<label index="error.notUnique">Dieser Eintrag existiert bereits</label>
 	<label index="ac.noResults">Autovervollständigung: Keine Resultate gefunden</label>
 	<label index="is_preferred">Bevorzugt</label>
+	<label index="confirm.toggle.is_preferred.on">Nur ein Datensatz dieses Typs kann jeweils als bevorzugt gewählt werden. Diesen Datensatz wirklich als bevorzugt anwählen?</label>
+	<label index="confirm.toggle.is_preferred.off">Nur ein Datensatz dieses Typs kann jeweils als bevorzugt gewählt werden. Diesen Datensatz wirklich nicht mehr als bevorzugen?</label>
 	<label index="dateselector.open">Öffne Kalender um ein Datum auszuwählen</label>
 	<label index="autocompleteInfo">Dieses Feld wird automatisch vervollständigt. Fangen Sie an zu schreiben um die Vorschläge zu sehen</label>
 	<label index="legend.main">Rollendefinition</label>
